# workbench

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.claude/commands/: work.md
.github/workflows/: ci.yml
core/: Cargo.toml
core/src/: cli_bridge.rs  cli_server.rs  contract.rs  engine.rs  error.rs  event.rs  invariant_tests.rs  lib.rs  log.rs  memory_store.rs  projection.rs  wasm.rs
docs/: CLAUDE.md  DESIGN.md  MVP-ACCEPTANCE.md  SPEC-v1.md  TECH-SPEC.md  WORKFLOW.md
scripts/: run-worker.sh
ui/: package-lock.json  package.json
ui/design-system/: card-ai-proposal.html  card-canvas-nodes.html  card-controls.html  card-foundations.html  tokens.css
ui/src/: App.css  App.tsx  EmptyState.tsx  PoiEditor.tsx  PoiNode.tsx  Preview3D.tsx  Sidebar.tsx  Toolbar.tsx  TopologyGraph.tsx  coreBridge.ts  index.css  main.tsx  mockData.ts  proposalOverlay.ts  types.ts
ui/src/components/ui/: button.tsx  separator.tsx
ui/src/core-pkg/: workbench_core.d.ts  workbench_core.js  workbench_core_bg.wasm  workbench_core_bg.wasm.d.ts
ui/src/lib/: utils.ts
