[package]
name = "workbench-core"
version = "0.1.0"
edition = "2021"
license = "MIT"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["native"]
native = ["rusqlite"]

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
wasm-bindgen = "0.2"

# wasm-only: js Date clock for timestamps (SystemTime::now panics on wasm32).
[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"

[[bin]]
name = "workbench-server"
path = "src/bin/server.rs"
required-features = ["native"]

[dev-dependencies]
tempfile = "3"
